Gnome-Shell: [StScrollBar] Stop variant-sensitive trough background in global section
In most cases, troughs are placed in OSD-like widgets...

--- a/shell/sass/gnome-shell/_common.scss
+++ b/shell/sass/gnome-shell/_common.scss
@@ -133,7 +133,9 @@ StScrollBar {
   StBin#trough {
     margin: 0;
     border-radius: 0;
-    background-color: $fill_color;
+    background-color: if($nokto == 'false',
+                      shellopacity($inverted_fg_color, 0.15),
+                      shellopacity($fg_color, 0.15));
   }
 
   StButton#vhandle,
